--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,31 +1,28 @@
 <resources>
     <string name="app_name">Sleep Bot</string>
-    <string name="descrMenu">Elija una opción del menú</string>
-    <string name="updateInfo">Actualizando información</string>
-    <string name="loginToolbar">Inicio de sesión</string>
-    <string name="name">Nombre</string>
+    <string name="descrMenu">Menu</string>
+    <string name="updateInfo">Update Info</string>
+    <string name="loginToolbar">login</string>
+    <string name="name">Name</string>
     <string name="email">Email</string>
-    <string name="passWord">Contraseña</string>
-    <string name="btLogIn">Iniciar</string>
-    <string name="errorFaltanDatos">Error, faltan datos por introducir</string>
-    <string name="iniciandoLogin">Iniciando sesión...</string>
-    <string name="userNotEnabled">El usuario esta desactivado</string>
-    <string name="incorrectPassword">Contraseña incorrecta</string>
-    <string name="usernameNotExist">El usuario no existe</string>
-    <string name="btn_link_to_register">No eres miembro? Regístrate ahora.</string>
-    <string name="registerToolbar">Regístrate Ahora</string>
-    <string name="confirmPassword">Confirmar contraseña</string>
-    <string name="btRegister">Registrarse</string>
-    <string name="btn_link_to_login">Ya eres miembro? Pues inicia sesión.</string>
-    <string name="RegistroOK">Registrado, ya puedes iniciar sesión con tu usuario</string>
-    <string name="passwordNoCoincide">Las contraseñas no coinciden</string>
-    <string name="mensajeCargaRegistro">Registrando...</string>
-    <string name="errorAlRegistrar">Error al registrar el usuario</string>
-    <string name="errorUsuarioYaExiste">Error, el usuario ya existe con ese email</string>
-    <string name="noHayConexionServidor">Error: No se puede conectar con el servidor</string>
-    <string name="UnknownErrorRegistration">Error desconocido al registrarte</string>
-    <string name="ErrorPostParamsMissing">Error, faltan parametros POST en la petición HTTP</string>
-    <string name="UserAlreadyExist">Error, el usuario ya existe</string>
-    <string name="Wrong_Credentials">Credenciales incorrectas</string>
-    <string name="Session_Started">Sesión iniciada</string>
+    <string name="passWord">Password</string>
+    <string name="btLogIn">Login</string>
+    <string name="startingLogin">Logging in...</string>
+    <string name="userNotEnabled">User Not Enabled</string>
+    <string name="incorrectPassword">Incorrect Password</string>
+    <string name="usernameNotExist">Username is not exists</string>
+    <string name="btn_link_to_register">Not a member? Register now.</string>
+    <string name="registerToolbar">Register</string>
+    <string name="confirmPassword">Confirm Password</string>
+    <string name="btRegister">Check in</string>
+    <string name="btn_link_to_login">Already a member? So sign in.</string>
+    <string name="RegisterOk">Registered, you can now log in with your user</string>
+    <string name="passwordNoCoincide">Passwords do not match</string>
+    <string name="errorAlRegistrar">Error registering user</string>
+    <string name="errorUserAlredyExists">Error, the user already exists with that email</string>
+    <string name="UnknownErrorRegistration">Unknown error registering</string>
+    <string name="ErrorPostParamsMissing">Error, missing POST parameters in HTTP request</string>
+    <string name="UserAlreadyExist">Error, user already exists</string>
+    <string name="Wrong_Credentials">wrong credentials</string>
+    <string name="Session_Started">logged in</string>
 </resources>
